# npi_mcp

./: README.md  app.py  curl_example.sh  explanation.md  pyproject.toml  requirements.txt
.githooks/: pre-push
artifacts/: explanation.md
src/npi_mcp/: main.py  mcp_tools.py  models.py  npi_client.py
src/npi_mcp_server/: __init__.py  config.py  main.py  schemas.py  tools.py
tests/: test_npi_mcp.py  test_npi_mcp_server.py  test_npi_mcp_server_extended.py
