[project]
name = "npi-mcp"
version = "0.1.0"
description = "MCP server for NPPES NPI Registry"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "sse-starlette>=1.8.0",
    # Dev dependencies included here for simplicity in hackathon context
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/npi_mcp"]
